text fix and alignment

--- a/assets/sass/templates/_company.scss
+++ b/assets/sass/templates/_company.scss
@@ -407,9 +407,6 @@
 	.form-post-now-button-container {
 		padding-top: 0 !important;
 		padding-bottom: 0 !important;
-		.post-now-button {
-			float: right;
-		}
 	}
 
 }
